add README.md file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,7 @@ button:hover {
 }
 
 .player {
-    background-color: #B4A0DD
-    ;
+    background-color: #B4A0DD;
     float: left;
     width: 45%;
 }
